<resources>
    <string name="app_name">Amoure</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_vis_search">Vis Search</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">Cart</string>
    <string name="title_add">Add</string>

    <string name="title_your_cart">Your Cart</string>
    <string name="your_address">Your Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total %1$s</string>

    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="four">4</string>
    <string name="product_image">Product Image</string>

    <string name="trending">Trending</string>
    <string name="for_you">Recent Items</string>
    <string name="search_hint">Search fashion items…</string>

    <string name="alert_error">Please try again later\! Server isn\'t responding</string>

    <string name="size_color_cart">Size, Color: %1$s %2$s</string>
    <string name="size_cart">Size: %1$s</string>
    <string name="retail_price_cart">Retail Price: %1$s</string>

    <string name="color_cart">Color: %1$s</string>
    <string name="rent_price_cart">Rent Price: %1$s</string>
    <string name="rent_price_product">%1$s / 4 days</string>
    <string name="rental_period">Rental Period</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="remove_product">Remove Product</string>

    <string name="cc_number">Credit Card Number</string>
    <string name="exp_date">Expire Date (MM/YY)</string>
    <string name="sec_code">Security Code</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_item">%1$s (%2$s)</string>

    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="login_account">Login To Your Account</string>
    <string name="register_account">Register Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_conf">Password Confirmation</string>
    <string name="your_name">Your Name</string>
    <string name="user_type">Role</string>
    <string name="password_message">Password must be at least 8 characters, and contain both letters and numbers. Only these symbols can be used -_.@</string>

    <string name="register_alert_title_success">Account registration is successful!</string>
    <string name="register_alert_title_error">There something wrong when register!</string>
    <string name="login_alert_title_success">Login successful!</string>
    <string name="login_alert_title_error">There something wrong when login!</string>
    <string name="alert_ok">OK</string>
    <string name="input_required">Please input a valid %1$s!</string>
    <string name="input_required_2">Please input %1$s!</string>
    <string name="password_not_match_error">Passwords do not match. Please ensure both password inputs are identical.</string>

    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_your_rent">Your Rent</string>

    <string name="designer_name">Designer Name</string>
    <string name="address_detail">Address Detail</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_num">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="save">Save</string>
    <string name="phone_num_message">Do not use dialing code (+62), use 0 in front; example: 0812xxx</string>

    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="retail_price">Retail Price:</string>
    <string name="rent_price">Rent Price:</string>
    <string name="rent_now">Rent Now</string>
    <string name="try_on">Try On</string>
    <string name="product_details">Product Details</string>
    <string name="stylish_notes">Stylish Notes</string>
    <string name="designer">Designer</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="similar_items">Similar Items</string>
    <string name="see_all_items">See all items</string>
    <string name="see_all_reviews">See all reviews</string>
    <string name="rating_reviews_count">%1$s (%2$s Reviews)</string>

    <string name="title_review">Review</string>
    <string name="write_your_review">Write Your Review</string>
    <string name="rating">Rating: %1$s</string>
    <string name="star">Star</string>
    <string name="comment">Comment: </string>
    <string name="give_rating">Give Your Rating: </string>
    <string name="review_message_1">Posting Your Review:</string>
    <string name="review_message_2">Your Comments posted here may be used for advertising purposes.</string>
    <string name="review_message_3">We cannot accept requests for posting advertisements including other brands, individuals, organizations. Also we cannot hold inventory neither sizes.</string>
    <string name="post_review">Post Review</string>

    <string name="arrives_by">Arrives by: %1$s</string>
    <string name="return_on">Return on: %1$s</string>
    <string name="status">Status: %1$s</string>
    <string name="timeout">Timeout</string>
    <string name="retry">Retry</string>
    <string name="title_dialog_cart">Rent item successful!</string>
    <string name="message_dialog_cart">Please wait for the rent item to arrive at your home.</string>
    <string name="title_dialog_edit_profile">Edit your profile successful!</string>
    <string name="cart_alert_title_error">There something wrong when renting item!</string>
    <string name="edit_profile_alert_title_error">There something wrong when edit profile!</string>

    <string name="addproduct_name">Designer Owner/House/Name</string>
    <string name="addproduct_product">Product Name</string>
    <string name="addproduct_details">Details</string>
    <string name="addproduct_stylish">Stylish Notes</string>
    <string name="addproduct_retail">Retail Price</string>
    <string name="addproduct_rent">Rent Price</string>
    <string name="addproduct_category">Category</string>
    <string name="addproduct_size">Size</string>
    <string name="addproduct_upload">Upload Image</string>

    <string name="size_xs">XS</string>
    <string name="size_s">S</string>
    <string name="size_m">M</string>
    <string name="size_l">L</string>
    <string name="size_xl">XL</string>
    <string name="size_xxl">XXL</string>

    <string name="tryon_items">Items:</string>
    <string name="tryon_message_1">Before using Try On:</string>
    <string name="tryon_message_2">1. Ensure your pose straight to the camera</string>
    <string name="tryon_message_3">2. Please note that the size may not accurately reflect the actual size of the fashion item</string>
    <string name="tryon_message_4">3. The User with free account are limited to only 10 try on’s</string>

    <string name="cam">Camera</string>
    <string name="img">Image</string>
    <string name="run">Run</string>
    <string name="empty_image_error">Image has not been added</string>
    <string name="address">Jl Wijaya Kusuma 15 A, DKI Jakarta</string>
    <string name="vis_search_message">Do you want to look more in the “%1$s” Section</string>
    <string name="input_image_message">The first image to be used as the thumbnail. The last image is for product image.</string>

    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>
    <string name="no_data_rent">You don\'t have any item in rent!. Explore our available items in to see what\'s new. Happy renting!</string>
    <string name="no_data_wishlist">You don\'t have any item in wishlist!. Explore our available items in to see what\'s new!</string>
    <string name="add_wishlist">Item added to your wishlist!</string>
    <string name="add_wishlist_failed">Item already added to your wishlist!</string>
</resources>