<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24px"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_category_24px"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_vis_search"
        android:icon="@drawable/ic_vis_search_24px"
        android:title="@string/title_vis_search" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_wishlist_24px"
        android:title="@string/title_wishlist" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24px"
        android:title="@string/title_profile" />

</menu>