<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tryon.TryOnInfoActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Centering container for TextView and Dropdown -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/tryon_items"
                    android:gravity="center"
                    android:labelFor="@+id/ed_category"
                    android:layout_gravity="center_vertical"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edl_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    app:endIconMinSize="30dp"
                    app:contentScrim="@color/white"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/ed_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:padding="5dp"
                        app:simpleItems="@array/try_on"
                        app:contentScrim="@color/white"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="120dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:background="@color/gray_blue_200"
                app:shapeAppearanceOverlay="@style/RoundedSquare" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tryon_message_1"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:labelFor="@+id/ed_tryon_message"
                style="@style/TextHeadline3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tryon_message_2"
                android:textSize="12sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:labelFor="@+id/ed_tryon_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tryon_message_3"
                android:textSize="12sp"
                android:layout_marginHorizontal="20dp"
                android:labelFor="@+id/ed_tryon_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tryon_message_4"
                android:textSize="12sp"
                android:layout_marginHorizontal="20dp"
                android:labelFor="@+id/ed_tryon_message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20dp">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/bt_camera"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cam"
                        android:layout_marginLeft="20dp"
                        style="@style/Widget.App.Button" />

                    <Button
                        android:id="@+id/bt_image"
                        style="@style/Widget.App.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/img"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/item_product_small"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_product"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedSquare"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/navy_blue_700"
                    android:text="@string/lorem_ipsum"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_product"
                    app:layout_constraintTop_toTopOf="@id/iv_product"
                    tools:text="@string/lorem_ipsum" />

                <TextView
                    android:id="@+id/tv_owner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/lorem_ipsum"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:layout_constraintStart_toEndOf="@id/iv_product"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name" />


                    <TextView
                        android:id="@+id/tv_retail_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:text="@string/retail_price_cart"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@id/iv_product"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_owner"
                        tools:text="@string/retail_price_cart" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:text="@string/rent_price_cart"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@id/iv_product"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_retail_price"
                        tools:text="@string/rent_price_cart" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <Button
                    android:id="@+id/bt_run"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:text="@string/run"
                    style="@style/Widget.App.Button" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:navigationIcon="@drawable/app_icon"
            style="@style/Widget.App.Toolbar" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:layout_marginTop="-20dp"
            app:title="@string/try_on"
            app:navigationIcon="@drawable/ic_arrow_back_24px"
            style="@style/Widget.App.Toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/navy_blue_700"
        android:visibility="gone"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
