<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_product_small"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_product"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/navy_blue_700"
        android:text="@string/lorem_ipsum"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_product"
        app:layout_constraintEnd_toStartOf="@+id/bt_remove"
        app:layout_constraintTop_toTopOf="@id/iv_product"
        tools:text="@string/lorem_ipsum" />

    <TextView
        android:id="@+id/tv_owner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/lorem_ipsum"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="@string/lorem_ipsum" />


    <TextView
        android:id="@+id/tv_retail_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/retail_price_cart"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_owner"
        tools:text="@string/retail_price_cart" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/rent_price_cart"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_retail_price"
        tools:text="@string/rent_price_cart" />


    <Button
        style="?attr/materialIconButtonStyle"
        android:id="@+id/bt_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/remove_product"
        app:iconTint="@color/red_500"
        app:icon="@drawable/ic_remove_24px"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_product"
        />

</androidx.constraintlayout.widget.ConstraintLayout>