<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_rent_history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_product"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/navy_blue_700"
        android:text="@string/lorem_ipsum"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toEndOf="@id/iv_product"
        app:layout_constraintTop_toTopOf="@id/iv_product"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/lorem_ipsum" />

    <TextView
        android:id="@+id/tv_owner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/lorem_ipsum"
        android:layout_marginStart="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/iv_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="@string/lorem_ipsum" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/status"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_owner" />

    <TextView
        android:id="@+id/tv_arrives"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/arrives_by"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_status" />

    <TextView
        android:id="@+id/tv_return"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/return_on"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_arrives" />
</androidx.constraintlayout.widget.ConstraintLayout>