<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <TextView
        android:id="@+id/tv_login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:textSize="20sp"
        android:text="@string/login_account"
        android:gravity="center"
        style="@style/TextHeadline3"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tv_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/navy_blue_700"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:labelFor="@+id/ed_login_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_account"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edl_login_email"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="12dp"
        app:endIconMinSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/navy_blue_700"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/ed_login_password"
        app:layout_constraintTop_toBottomOf="@+id/edl_login_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edl_login_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="12dp"
        app:endIconMode="password_toggle"
        app:endIconMinSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.amoure.amoure.customview.EditTextPassword
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_login_password_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_message"
        android:textColor="@color/navy_blue_700"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:textSize="12sp"
        android:labelFor="@+id/ed_login_password"
        app:layout_constraintTop_toBottomOf="@+id/edl_login_password"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.App.Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_password_message"
        />

    <Button
        style="?attr/materialIconButtonStyle"
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:layout_margin="10dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:icon="@drawable/ic_arrow_back_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/navy_blue_700"
        android:visibility="gone"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>